# modx

./: .gitignore  .npmignore  README.md  modx-cli-0.1.2.tgz  package.json  pyproject.toml
.github/workflows/: publish.yml
demo_go_service/: go.mod  main.go
demo_java_service/: pom.xml
demo_java_service/src/main/java/com/example/: App.java
demo_js_service/: index.js  package.json
modx/: __init__.py  ai.py  analyzer.py  cli.py  migrator.py  planner.py
modx/ai/: __init__.py  ai_modernizer.py  ollama_client.py
modx/core/: __init__.py  analyzer.py  migrator.py  planner.py
modx/core/migrators/: __init__.py  base.py  go_migrator.py  java_migrator.py  js_migrator.py  python_migrator.py  utils.py
tests/: test_migrator_flow.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
